# geewergameshub

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: input.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: AdBanner.svelte  RatePopup.svelte  i18n.js
src/routes/: +layout.svelte  +page.svelte
