[package]
name = "game-hub-widget"
version = "1.0.1"
description = "Le Hub de jeux personnalisable de tes rêves"
authors = ["you"]
edition = "2021"

[build-dependencies]
# On force la version 2.0 ou supérieure
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = [] }
tauri-build = { version = "^2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
opener = "0.7"
glob = "0.3"
regex = "1"
ureq = { version = "2.9", features = ["json"] }
urlencoding = "2"
tauri-plugin-dialog = "2" # Pour choisir les fichiers
tauri-plugin-fs = "2"     # Pour gérer les fichiers système
tauri-plugin-autostart = "2"
